@@ -454,7 +454,7 @@ static regs* newReg(short type, short pc_type, int rIdx, char *name, int size, i
       *buffer = 's';
     dReg->name = Safe_strdup(buffer);
   }
-  fprintf(stderr,"newReg: %s, rIdx = 0x%02x\n",dReg->name,rIdx);
+  //fprintf(stderr,"newReg: %s, rIdx = 0x%02x\n",dReg->name,rIdx);
   dReg->isFree = 0;
   dReg->wasUsed = 1;
   if(type == REG_SFR)
@@ -967,10 +967,10 @@ void packBits(set *bregs)
 
     breg = regset->item;
     breg->isBitField = 1;
-    fprintf(stderr,"bit reg: %s\n",breg->name);
+    //fprintf(stderr,"bit reg: %s\n",breg->name);
 
     if(breg->isFixed) {
-      fprintf(stderr,"packing bit at fixed address = 0x%03x\n",breg->address);
+      //fprintf(stderr,"packing bit at fixed address = 0x%03x\n",breg->address);
 
       bitfield = typeRegWithIdx (breg->address >> 3, -1 , 1);
       breg->rIdx = breg->address & 7;
@@ -978,7 +978,7 @@ void packBits(set *bregs)
 
       if(!bitfield) {
 	sprintf (buffer, "fbitfield%02x", breg->address);
-	fprintf(stderr,"new bit field\n");
+	//fprintf(stderr,"new bit field\n");
 	bitfield = newReg(REG_SFR, PO_GPR_BIT,breg->address,buffer,1,0);
 	bitfield->isBitField = 1;
 	bitfield->isFixed = 1;
@@ -998,7 +998,7 @@ void packBits(set *bregs)
 	byte_no++;
 	bit_no=0;
 	sprintf (buffer, "bitfield%d", byte_no);
-	fprintf(stderr,"new relocatable bit field\n");
+	//fprintf(stderr,"new relocatable bit field\n");
 	relocbitfield = newReg(REG_GPR, PO_GPR_BIT,rDirectIdx++,buffer,1,0);
 	relocbitfield->isBitField = 1;
 	//addSet(&dynDirectRegs,relocbitfield);
@@ -1036,7 +1036,7 @@ void bitEQUs(FILE *of, set *bregs)
 	       breg->rIdx & 0x0007);
 
     else {
-      fprintf(stderr, "bit field is not assigned to a register\n");
+      //fprintf(stderr, "bit field is not assigned to a register\n");
       fprintf (of, "%s\tEQU\t( (bitfield%d<<3)+%d)\n",
 	       breg->name,
 	       bit_no>>3,
@@ -1075,18 +1075,13 @@ void writeUsedRegs(FILE *of)
   packBits(dynDirectBitRegs);
 
   assignFixedRegisters(dynAllocRegs);
-  printf("assignFixedRegisters(dynAllocRegs);\n");
   assignFixedRegisters(dynStackRegs);
-  printf("assignFixedRegisters(dynStackRegs);\n");
   assignFixedRegisters(dynDirectRegs);
-  printf("assignFixedRegisters(dynDirectRegs);\n");
 
   assignRelocatableRegisters(dynInternalRegs,0);
-  printf("assignRelocatableRegisters(dynInternalRegs,0);\n");
   assignRelocatableRegisters(dynAllocRegs,0);
-  printf("assignRelocatableRegisters(dynAllocRegs,0);\n");
   assignRelocatableRegisters(dynStackRegs,0);
-  printf("assignRelocatableRegisters(dynStackRegs,0);\n");
+
 /*
   assignRelocatableRegisters(dynDirectRegs,0);
   printf("assignRelocatableRegisters(dynDirectRegs,0);\n");
